--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prepublishOnly": "yarn build",
     "release:next": "npm publish --access public --tag next",
     "release": "release-it",
-    "mongo-start": "MONGODB_VERSION=4.0.x mongodb-runner start --topology=replicaset --name=test --port=31000",
+    "mongo-start": "MONGODB_VERSION=4.4.x mongodb-runner start --topology=replicaset --name=test --port=31000",
     "mongo-stop": "mongodb-runner stop --topology=replicaset --name=test",
     "test:e2e": "jest --config ./tests/jest-e2e.json --runInBand --coverage",
     "test:e2e:dev": "npm run test:e2e --watchAll"
@@ -45,11 +45,10 @@
     "@nestjs/platform-express": "^7.6.5",
     "@nestjs/testing": "^7.6.5",
     "@types/jest": "^26.0.3",
-    "@types/mongodb": "3.5.25",
     "@types/supertest": "^2.0.10",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
-    "mongodb": "3.x.x",
+    "mongodb": "^4.0.0-beta.4",
     "mongodb-runner": "^4.7.2",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
@@ -58,12 +57,12 @@
     "rxjs": "^6.6.3",
     "supertest": "^6.1.2",
     "ts-jest": "^26.1.1",
-    "type-mongodb": "^1.0.0-beta",
+    "type-mongodb": "^2.0.0-beta.2",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.13",
-    "type-mongodb": "^1.0.0-beta"
+    "type-mongodb": "^2.0.0-beta.2"
   },
   "prettier": {
     "singleQuote": true,
@@ -75,9 +74,6 @@
     }
   },
   "release-it": {
-    "commitMessage": "chore: release v${version}",
-    "github": {
-      "release": true
-    }
+    "commitMessage": "chore: release v${version}"
   }
 }
