--- a/package.json
+++ b/package.json
@@ -40,29 +40,29 @@
     "test:e2e:dev": "npm run test:e2e --watchAll"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.6.5",
-    "@nestjs/core": "^7.6.5",
-    "@nestjs/platform-express": "^7.6.5",
-    "@nestjs/testing": "^7.6.5",
-    "@types/jest": "^26.0.3",
-    "@types/supertest": "^2.0.10",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "mongodb": "^4.0.0-beta.4",
-    "mongodb-runner": "^4.7.2",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^2.0.1",
+    "@nestjs/common": "^8.0.4",
+    "@nestjs/core": "^8.0.4",
+    "@nestjs/platform-express": "^8.0.4",
+    "@nestjs/testing": "^8.0.4",
+    "@types/jest": "^26.0.24",
+    "@types/supertest": "^2.0.11",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "mongodb": "^4.0.0",
+    "mongodb-runner": "^4.8.3",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^2.0.2",
     "reflect-metadata": "^0.1.13",
-    "release-it": "^14.6.2",
-    "rxjs": "^6.6.3",
-    "supertest": "^6.1.2",
-    "ts-jest": "^26.1.1",
-    "type-mongodb": "^2.0.0-beta.4",
-    "typescript": "^4.1.3"
+    "release-it": "^14.10.0",
+    "rxjs": "^7.2.0",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.6",
+    "type-mongodb": "^2.0.0-beta.8",
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.13",
-    "type-mongodb": "^2.0.0-beta.4"
+    "type-mongodb": "^2.0.0-beta.8"
   },
   "prettier": {
     "singleQuote": true,
