--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "npm run clean && tsc -p tsconfig.json",
     "watch": "tsc -w",
     "pretty": "prettier '{src,tests}/**/*.ts' --write",
-    "prepublishOnly": "yarn build",
+    "prepublishOnly": "npm run build",
     "release:next": "npm publish --access public --tag next",
     "release": "release-it",
     "mongo-start": "MONGODB_VERSION=4.4.x mongodb-runner start --topology=replicaset --name=test --port=31000",
@@ -61,6 +61,8 @@
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
+    "@nestjs/common": "^8.0.4",
+    "@nestjs/core": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "type-mongodb": "^2.0.0-beta.8"
   },
