--- a/package.json
+++ b/package.json
@@ -38,24 +38,23 @@
     "test:e2e:dev": "npm run test:e2e --watchAll"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.6.5",
-    "@nestjs/core": "^7.6.5",
-    "@nestjs/platform-express": "^7.6.5",
-    "@nestjs/testing": "^7.6.5",
-    "@types/jest": "^26.0.3",
-    "@types/supertest": "^2.0.10",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/testing": "^9.2.1",
+    "@types/jest": "^29.2.3",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.3.1",
     "mongodb": "^4.12.1",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^2.0.1",
+    "prettier": "^2.8.0",
     "reflect-metadata": "^0.1.13",
-    "release-it": "^14.6.2",
-    "rxjs": "^6.6.3",
-    "supertest": "^6.1.2",
-    "ts-jest": "^26.1.1",
+    "release-it": "^15.5.0",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.5.7",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
     "type-mongodb": "^2.0.0-beta.11",
-    "typescript": "^4.1.3"
+    "typescript": "^4.9.3"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.13",
@@ -64,11 +63,6 @@
   "prettier": {
     "singleQuote": true,
     "trailingComma": "none"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
   },
   "release-it": {
     "commitMessage": "chore: release v${version}"
